# shopping-agent

./: CLAUDE.md  MILESTONES.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  guardrails.py  memory.py  tools.py
backend/app/db/: database.py  schema.py
backend/app/routers/: agent.py  cart.py  orders.py  products.py
backend/scripts/: eval.py  seed.py  test_guardrails.py  test_tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: CartSidebar.jsx  ChatWidget.jsx  Header.jsx  ProductGrid.jsx
frontend/src/lib/: api.js
frontend/src/pages/: OrdersPage.jsx
